// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar different error states 1`] = `
Array [
  .c0 {
  height: 3rem;
  width: 3rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 3rem;
  width: 5.699999999999999rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 4.32rem;
  width: 3.3000000000000003rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 4.32rem;
  width: 3.3000000000000003rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 3rem;
  width: 4.5rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 5.4rem;
  width: 3rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
]
`;

exports[`Storyshots Avatar different sizes 1`] = `
Array [
  .c0 {
  height: 3rem;
  width: 3rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 6rem;
  width: 6rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 10rem;
  width: 10rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 15rem;
  width: 15rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
]
`;

exports[`Storyshots Avatar playground 1`] = `
.c0 {
  height: 6rem;
  width: 6rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
  className="c0"
  onClick={[Function]}
/>
`;

exports[`Storyshots Bar different directions 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: black;
  color: white;
  pointer-events: auto;
  height: 2.25rem;
  width: 100%;
  z-index: 0;
}

.c0:hover {
  border-color: #658f7b;
}

<div
    style={
      Object {
        "height": "300px",
      }
    }
  >
    <div
      className="c0"
      direction="HORIZONTAL"
      height="2.25rem"
      width="30rem"
    >
      Hello
    </div>
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: black;
  color: white;
  pointer-events: auto;
  height: 100%;
  width: 30rem;
  z-index: 0;
}

.c0:hover {
  border-color: #658f7b;
}

<div
    style={
      Object {
        "height": "300px",
      }
    }
  >
    <div
      className="c0"
      direction="VERTICAL"
      height="2.25rem"
      width="30rem"
    >
      Hello
    </div>
  </div>,
]
`;

exports[`Storyshots Bar different variants 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: black;
  color: white;
  pointer-events: auto;
  height: 2.25rem;
  width: 100%;
  z-index: 0;
}

.c0:hover {
  border-color: #658f7b;
}

<div
    className="c0"
    direction="HORIZONTAL"
    height="2.25rem"
    width="30rem"
  >
    Hello
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: white;
  color: black;
  pointer-events: auto;
  height: 2.25rem;
  width: 100%;
  z-index: 0;
}

.c0:hover {
  border-color: #658f7b;
}

<div
    className="c0"
    direction="HORIZONTAL"
    height="2.25rem"
    width="30rem"
  >
    Hello
  </div>,
]
`;

exports[`Storyshots Button different sizes 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #fdbe68;
  border-color: #797B7A;
  color: #000000;
  width: 5.33333rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #fdbe68;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="SMALL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #fdbe68;
  border-color: #797B7A;
  color: #000000;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #fdbe68;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #fdbe68;
  border-color: #797B7A;
  color: #000000;
  width: 16rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #fdbe68;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="LARGE"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #fdbe68;
  border-color: #797B7A;
  color: #000000;
  width: 100%;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #fdbe68;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="EXTRA_LARGE"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
]
`;

exports[`Storyshots Button different variants 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #797B7A;
  border-color: #658f7b;
  color: #FFFFFF;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #658f7b;
  color: #FFFFFF;
  border-color: #797B7A;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #C8CAC9;
  border-color: #C8CAC9;
  color: #f4f6f4;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #C8CAC9;
  color: #FFFFFF;
  border-color: #C8CAC9;
}

<button
    className="c0"
    disabled={true}
    href={null}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #658f7b;
  border-color: #797B7A;
  color: #FFFFFF;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #658f7b;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #b5decb;
  border-color: #797B7A;
  color: #000000;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #b5decb;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #fdbe68;
  border-color: #797B7A;
  color: #000000;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #fdbe68;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #E2625E;
  border-color: #797B7A;
  color: #FFFFFF;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #E2625E;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
]
`;

exports[`Storyshots Button playground 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #797B7A;
  border-color: #658f7b;
  color: #FFFFFF;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #658f7b;
  color: #FFFFFF;
  border-color: #797B7A;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="NORMAL"
  tabIndex={1}
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots Button works with links 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #b5decb;
  border-color: #797B7A;
  color: #000000;
  width: 5.33333rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #b5decb;
}

<a
    className="c0"
    disabled={false}
    href="https://offcourse.io"
    size="SMALL"
    tabIndex={1}
    type="button"
  >
    Hello
  </a>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #b5decb;
  border-color: #797B7A;
  color: #000000;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #b5decb;
}

<a
    className="c0"
    disabled={false}
    href="https://offcourse.io"
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </a>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #b5decb;
  border-color: #797B7A;
  color: #000000;
  width: 16rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #b5decb;
}

<a
    className="c0"
    disabled={false}
    href="https://offcourse.io"
    size="LARGE"
    tabIndex={1}
    type="button"
  >
    Hello
  </a>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #b5decb;
  border-color: #797B7A;
  color: #000000;
  width: 100%;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #b5decb;
}

<a
    className="c0"
    disabled={false}
    href="https://offcourse.io"
    size="EXTRA_LARGE"
    tabIndex={1}
    type="button"
  >
    Hello
  </a>,
]
`;

exports[`Storyshots Card can be turned off 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: none;
  background: #FFFFFF;
  border-color: #C8CAC9;
  box-sizing: border-box;
}

.c0:hover {
  border-color: #658f7b;
}

.c0 section:last-child {
  border-bottom: none;
}

<div
  className="c0"
>
  <h1>
    Hello World
  </h1>
</div>
`;

exports[`Storyshots Card selectable by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 0.125rem solid;
  background: #FFFFFF;
  border-color: #C8CAC9;
  box-sizing: border-box;
}

.c0:hover {
  border-color: #658f7b;
}

.c0 section:last-child {
  border-bottom: none;
}

<div
  className="c0"
>
  <h1>
    Hello World
  </h1>
</div>
`;
